# ChangeLog for www-apps/unb
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> +unb-1.6.4.ebuild,
  +metadata.xml:
  initial commit
