@@ -1,4 +1,6 @@
+DIST unb.devel.20090606.zip 813206 RMD160 5eea1635def4a12fce14da17fa668e500a85aeb2 SHA1 d116cbad9401b235fc154c3896692b5361f2f2c7 SHA256 22e21d9d556165367f6382bfcd7c461f1837b4dbd938d83c8bb42dc222313812
 DIST unb.stable.1.6.4.full.zip 799031 RMD160 400a133bc1228781a4a614e4c12f5cb475db709d SHA1 913fafa4f29c2adfaab51ec1ce946eaef5fd538c SHA256 f4508c13837e44faa1c92e85af161bf23292e97134447993d7a01ccee2af2b5d
 EBUILD unb-1.6.4.ebuild 945 RMD160 f6957c20f6773e4b1c43c3eb7fa6fbfeb4ee13cb SHA1 a8d04f5b2961c2a7f5cbc695da1e4bb1a8fc5140 SHA256 992a90ed0e347a384af71376f61868daa100f6e16ca7c18a762065671c5821c2
-MISC ChangeLog 220 RMD160 79fbc58c6ccb5d7a1e08983b095b6db5cacbb85d SHA1 ffaf9cafb19336f5ac7389b21a879e31591c61c1 SHA256 3b794ec5b2644c2028a46c73bf56f2278b5eb4b8a6a6238cd830bdc5b1a8e515
+EBUILD unb-1.6.5_rc20090606.ebuild 938 RMD160 9719f68a74ef68577a86b5588f9bc7c7d97de464 SHA1 ea88a8e425b0cd1b770281f4c90aa8701a06d0b5 SHA256 13e3e75ed35ee3740615bc2d1650f0c3b269627091a9fa122eede3f3b74376d3
+MISC ChangeLog 329 RMD160 b8cbef4191b17678fb69c543b95ec3a281774efa SHA1 39b193eb5d4b73eecc7c37d6bf32b71b620bdd5b SHA256 37f6ac113aa17b3dc688b19c091b39db668e7f0dd25701c106c691baf7f8240f
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
